Fixed group name. Whoops

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<section id="intro">
 		<div class="container text-center">
 			<div class="row">
-				<div class="col-md-12 logo"><h1>Duvuro</h1></div>
+				<div class="col-md-12 logo"><h1>Duzuro</h1></div>
 			</div>
 			<div class="row">
 				<div class="col-md-12">
