--- a/index.html
+++ b/index.html
@@ -133,9 +133,63 @@
 	</section>
 	<section id="m2">
 		<a href="#intro" class="up-link"><span class="glyphicon glyphicon-chevron-up"></span></a>
+		<div class="container">
+			<header class="row text-center">
+				<div class="col-md-12">
+					<h1>Milestone 2: <small>Storyboarding and Skit</small></h1>
+				</div>
+			</header>
+
+			<div class="row sb-0">
+				<div class="col-md-12 text-center">
+					<p>When took a close look at the ideas we had picked out, we decided that none of the three would necessarily be a good fit for this class. Although they targeted problems and needs that require solutions, they either couldn't be completed within the time constraints of this class, or would be far too difficult to user test in our current situation.</p>
+
+					<p>We decided to pick three new ideas to focus on that we believe are much more doable, as well as more directed towards the theme of the class.</p>
+				</div>
+			</div>
+
+			<div class="row sb-1">
+				<div class="col-md-4 text-justify">
+					<h2>Lecture Video Annotator</h2>
+					<p>A product comparable to classroom forums, like Piazza, this app would allow students to ask questions and give answers as annotations to a lecture video.
+					As the student watches the video, he or she can pause the video and insert a question at that time marker. Other students can then answer the question, and later review it as they rewatch the lecture.</p>
+				</div>
+				<div class="col-md-8">
+					<img src="img/annotations-storyboard.jpg" class="img-responsive img-rounded">
+				</div>
+			</div>
+
+			<div class="row sb-2">
+				<div class="col-md-8">
+					<img src="img/walk-alone-storyboard.jpg" class="img-responsive img-rounded">
+				</div>
+				<div class="col-md-4 text-justify">
+					<h2>Late Night Walk Protection</h2>
+					<p>When the time comes after a long day at the library to walk home alone, it can be frightening. People often pull out their cell phone even if they aren't talking
+					to anyone just to give the appearance of not being alone. This both discourages attackers, as well as gives comfort to the one walking alone. We aim to create a tool that improves this experience. Using the communication tools afforded by a smartphone, we believe an app can both make a person feel safer as they walk alone as well as more effectively discourage would-be attackers.</p>
+				</div>
+			</div>
+
+			<div class="row sb-3">
+				<div class="col-md-4 text-justify">
+					<h2>Brainstorm Tool</h2>
+					<p>When groups brainstorm, they usually run into two different bottlenecks. First, no matter how many people they have, they either run out of markers or run out whiteboard space. Their ability to write all of their ideas is limited by the physical constraints of writing on a whiteboard. Second, after they manage to write down a portion of the raw ideas that were in their mind, there's no easy way to organize the ideas. At best, one can erase and rewrite an idea, putting it where they want it. We've thought of creating an app that would be a virtual whiteboard for those involved in a brainstorming session. Each person would connect through their tablet or phone, and they'd be able to contribute to and collaboratively organize the ideas as they go.</p>
+				</div>
+				<div class="col-md-8">
+					<img src="img/brainstorm-storyboard.jpg" class="img-responsive img-rounded">
+				</div>
+			</div>
+		</div>
 	</section>
 	<section id="m3">
 		<a href="#intro" class="up-link"><span class="glyphicon glyphicon-chevron-up"></span></a>
+		<div class="container">
+			<header class="row text-center">
+				<div class="col-md-12">
+					<h1>Milestone 3: <small>Wizard-of-Oz Testing</small></h1>
+				</div>
+			</header>
+		</div>
 	</section>
 	<section id="m4">
 		<a href="#intro" class="up-link"><span class="glyphicon glyphicon-chevron-up"></span></a>
