Added headers to remaining milestones

--- a/index.html
+++ b/index.html
@@ -193,18 +193,53 @@
 	</section>
 	<section id="m4">
 		<a href="#intro" class="up-link"><span class="glyphicon glyphicon-chevron-up"></span></a>
+		<div class="container">
+			<header class="row text-center">
+				<div class="col-md-12">
+					<h1>Milestone 4: <small>Functional Prototype I</small></h1>
+				</div>
+			</header>
+		</div>
 	</section>
 	<section id="m5">
 		<a href="#intro" class="up-link"><span class="glyphicon glyphicon-chevron-up"></span></a>
+		<div class="container">
+			<header class="row text-center">
+				<div class="col-md-12">
+					<h1>Milestone 5: <small>User Study</small></h1>
+				</div>
+			</header>
+		</div>
 	</section>
 	<section id="m6">
 		<a href="#intro" class="up-link"><span class="glyphicon glyphicon-chevron-up"></span></a>
+		<div class="container">
+			<header class="row text-center">
+				<div class="col-md-12">
+					<h1>Milestone 6: <small>Functional Prototype II</small></h1>
+				</div>
+			</header>
+		</div>
 	</section>
 	<section id="m7">
 		<a href="#intro" class="up-link"><span class="glyphicon glyphicon-chevron-up"></span></a>
+		<div class="container">
+			<header class="row text-center">
+				<div class="col-md-12">
+					<h1>Milestone 7: <small>User Study II</small></h1>
+				</div>
+			</header>
+		</div>
 	</section>
 	<section id="m8">
 		<a href="#intro" class="up-link"><span class="glyphicon glyphicon-chevron-up"></span></a>
+		<div class="container">
+			<header class="row text-center">
+				<div class="col-md-12">
+					<h1>Milestone 8: <small>Final Presentation</small></h1>
+				</div>
+			</header>
+		</div>
 	</section>
 
 
