Added Google Presentation to M3

--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
 					<h1>Milestone 3: <small>Wizard-of-Oz Testing</small></h1>
 				</div>
 			</header>
+			<div class="row">
+				<iframe src="https://docs.google.com/presentation/d/1Ouy3iyVr7LfH8kYfTtS5t2qPgXla0ViPhgb-CXaEv7g/embed?start=false&loop=true&delayms=3000" frameborder="0" width="960" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+			</div>
 		</div>
 	</section>
 	<section id="m4">
