--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
 	<div id="side-frame-wrapper" ng-class="{open: !bigVid}">
 		<div class="content">
-			
+
 		</div>
 	</div>
 
@@ -28,6 +28,7 @@
 		</div>
 	</div>
 
+	<script type="text/javascript" src="/js/firebase.min.js"></script>
 	<script type="text/javascript" src="/js/angular.min.js"></script>
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/duzuro.js"></script>
