--- a/public/index.html
+++ b/public/index.html
@@ -6,30 +6,11 @@
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body ng-controller="NavCtrl">
-	<div id="video-frame" ng-class="{open: !bigVid}">
-		<video controls>
-			<source src="/videos/regex.mp4" type="video/mp4">
-			Your browser does not support the video tag.
-		</video>
-		<div class="control-bar">
-			<button ng-click="bigVid = !bigVid">Toggle</button>
-		</div>
-	</div>
-
-	<div id="side-frame-wrapper" ng-class="{open: !bigVid}">
-		<div class="content">
-
-		</div>
-	</div>
-
-	<div id="bottom-frame-wrapper" ng-class="{open: !bigVid}">
-		<div class="content">
-			
-		</div>
-	</div>
+	<div id="mainViewWrapper" ui-view></div>
 
 	<script type="text/javascript" src="/js/firebase.min.js"></script>
 	<script type="text/javascript" src="/js/angular.min.js"></script>
+	<script type="text/javascript" src="/js/videogular.min.js"></script>
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/duzuro.js"></script>
 </body>
