Cleaned up question adding functionality. Cleaned up directories.

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
-<body ng-controller="NavCtrl">
+<body>
 	<div id="mainViewWrapper" ui-view></div>
 
 	<script type="text/javascript" src="/js/firebase.min.js"></script>
