Tweaked general UI. Finished most of basic video UI. Added priority ordering to questions. Began individual question viewing UI

--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,13 @@
 	<script type="text/javascript" src="/js/videogular.min.js"></script>
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/duzuro.js"></script>
+
+	<script type="text/javascript">
+		window.onerror = function (errorMsg, url, lineNumber, columnNumber, errorObject) {
+		    if (errorObject && /<omitted>/.test(errorMsg)) {
+		        console.error('Full exception message: ' + errorObject.message);
+		    }
+		}
+	</script>
 </body>
 </html>
