--- a/index.html
+++ b/index.html
@@ -203,67 +203,67 @@
 				</div>
 				<div class="row text-center">
 					<p>Link to Prototype: http://duzuro.herokuapp.com/</p>
-					<p>Features: 
-View Questions/Answers:
-The left sidebar will feature the questions associated with the lecture video. The user will have the option to toggle between questions that pertain to his/her place in the video and all questions in the video. Further, there will functionality to search the questions or order them by various filters such as popularity or time proximity in this sidebar. When a question is clicked, the left sidebar switches views to display that question's details and all of its corresponding answers. When an answer is clicked, its details, in turn, are displayed in the bottom bar of the screen. Similarly, when the "Add Answer" button is clicked for a particular question, a form for submitting an answer appears in the bottom bar as well. 
+					<h2>Features:</h2> 
+					
+<p>View Questions/Answers:
+The left sidebar will feature the questions associated with the lecture video. The user will have the option to toggle between questions that pertain to his/her place in the video and all questions in the video. Further, there will functionality to search the questions or order them by various filters such as popularity or time proximity in this sidebar. When a question is clicked, the left sidebar switches views to display that question's details and all of its corresponding answers. When an answer is clicked, its details, in turn, are displayed in the bottom bar of the screen. Similarly, when the "Add Answer" button is clicked for a particular question, a form for submitting an answer appears in the bottom bar as well. </p>
 
-Visual Markers:
-The video stream bar would feature visual markers, much like the annotation markers on SoundCloud, to indicate the presence of questions/comments added at certain points in the video. 
+<p>Visual Markers:
+The video stream bar would feature visual markers, much like the annotation markers on SoundCloud, to indicate the presence of questions/comments added at certain points in the video. </p>
 
-We felt that the above two mechanisms for viewing questions allow users to easily survey helpful questions, both in the case when they are looking to find a specific question at a certain point in the video or when generally looking to get a glimpse of doubts/discussions. 
+<p>We felt that the above two mechanisms for viewing questions allow users to easily survey helpful questions, both in the case when they are looking to find a specific question at a certain point in the video or when generally looking to get a glimpse of doubts/discussions. </p>
 
-Ask Question:
-There will be an "Ask Question" button in the video controls bar, which when clicked displays a form for submitting a question in the bottom bar. This form would allow the user to submit a question by incorporating rich media such as screenshots with annotation and/or Khan Academy style video annotation. 
+<p>Ask Question:
+There will be an "Ask Question" button in the video controls bar, which when clicked displays a form for submitting a question in the bottom bar. This form would allow the user to submit a question by incorporating rich media such as screenshots with annotation and/or Khan Academy style video annotation.</p> 
 
-Add Answer: 
-When a user chooses to add an answer to a particular question in the sidebar, a form appears in the bottom bar for submitting an answer. The same functionality for incorporating rich media as described above would be available. 
+<p>Add Answer: 
+When a user chooses to add an answer to a particular question in the sidebar, a form appears in the bottom bar for submitting an answer. The same functionality for incorporating rich media as described above would be available. </p>
 
-We felt that an issue with current class forums such as Piazza is that the questions and answers presented there are so removed from the context upon which they are based (lecture or textbook content). Further, the content on these forums is very answer-driven rather than learning-driven. People usually ask concept-related questions in office hours, after class, in person with their friends, or on Khan Academy. We felt that the experience of learning classroom material could be significantly improved by bringing the discussion forum into the context of the material itself, and facilitate the creation of more learning-oriented questions and answers with the rich annotation methods explained in the above two features. 
+<p>We felt that an issue with current class forums such as Piazza is that the questions and answers presented there are so removed from the context upon which they are based (lecture or textbook content). Further, the content on these forums is very answer-driven rather than learning-driven. People usually ask concept-related questions in office hours, after class, in person with their friends, or on Khan Academy. We felt that the experience of learning classroom material could be significantly improved by bringing the discussion forum into the context of the material itself, and facilitate the creation of more learning-oriented questions and answers with the rich annotation methods explained in the above two features. </p>
 
-Upvoting/Downvoting: 
-Users would have the ability to upvote/downvote answers to questions. 
+<p>Upvoting/Downvoting: 
+Users would have the ability to upvote/downvote answers to questions. </p>
 
-Concept Clustering/Tags: 
-There should be a cohesive system for labeling the questions with a streamlined list of concepts that correspond to various time blocks in the lecture. This would make distilling one's own question and discovering relevant question/answer pairs far easier. Further, it could help inform the instructor on the topics that students are most confused about. This concept labeling could either be sourced by students or instructors.
+<p>Concept Clustering/Tags: 
+There should be a cohesive system for labeling the questions with a streamlined list of concepts that correspond to various time blocks in the lecture. This would make distilling one's own question and discovering relevant question/answer pairs far easier. Further, it could help inform the instructor on the topics that students are most confused about. This concept labeling could either be sourced by students or instructors.</p>
 
-Intelligent Prompting: 
-Based on factors like when the user pauses a lot or replays the content, intelligent prompts could be given to the student to view or create questions around the concept corresponding to the time block. Further, based on factors like a lack of pausing during certain time blocks and history of contributions, prompts can be made to "expert" users on certain topics after they complete the video. 
-
-
-
+<p>Intelligent Prompting: 
+Based on factors like when the user pauses a lot or replays the content, intelligent prompts could be given to the student to view or create questions around the concept corresponding to the time block. Further, based on factors like a lack of pausing during certain time blocks and history of contributions, prompts can be made to "expert" users on certain topics after they complete the video. </p>
 
 
 
-Implementation Progress
 
 
-View Questions/Answers:
-Questions that have been asked on the video are shown to the user in the "Question Sidebar" with a title and time stamp.  Questions and answers can each be clicked to display the detailed view of each. 
+
+<h2>Implementation Progress<h2>
 
 
-Ask Question/Add Answer:
-An "Ask Question" button is located on the video controls bar, displaying a basic form for submitting the title and detail of the question. An "Add Answer" button is located on each question's detail page. Clicking this will also display a basic form for submitting the title and detail of the user's answer. 
-
-Video Functionality: 
-Video embedding and controls 
-
-Infrastructure:
-All the underlying infrastructure (fronted & backend) of the code has been built
-
-Annotation Progress:
-We prioritized enabling the rich annotation capabilities described in the feature section, however, given that all the other bare bones functionality needed to be built for it to exist and that the drawing/annotation is a large feature, we are still building it. However, we have made progress and plan to complete it soon. 
-
-Basic UI
+<p>View Questions/Answers:
+Questions that have been asked on the video are shown to the user in the "Question Sidebar" with a title and time stamp.  Questions and answers can each be clicked to display the detailed view of each. </p>
 
 
-Remaining (In Decreasing Priority): 
-Complete Annotation Capabilities
-Add User Accounts
-Time Proximity Filters for Viewing Questions
-Upvoting/Downvoting
-Concept Clustering/Tags
-Intelligent Prompts
-</p>
+<p>Ask Question/Add Answer:
+An "Ask Question" button is located on the video controls bar, displaying a basic form for submitting the title and detail of the question. An "Add Answer" button is located on each question's detail page. Clicking this will also display a basic form for submitting the title and detail of the user's answer. </p>
+
+<p>Video Functionality: 
+Video embedding and controls </p>
+
+<p>Infrastructure:
+All the underlying infrastructure (fronted & backend) of the code has been built</p>
+
+<p>Annotation Progress:
+We prioritized enabling the rich annotation capabilities described in the feature section, however, given that all the other bare bones functionality needed to be built for it to exist and that the drawing/annotation is a large feature, we are still building it. However, we have made progress and plan to complete it soon. </p>
+
+<p>Basic UI</p>
+
+
+<h2>Remaining (In Decreasing Priority): <h2>
+<p>Complete Annotation Capabilities</p>
+<p>Add User Accounts</p>
+<p>Time Proximity Filters for Viewing Questions</p>
+<p>Upvoting/Downvoting</p>
+<p>Concept Clustering/Tags</p>
+<p>Intelligent Prompts</p>
 				</div>
 			</header>
 		</div>
