--- a/index.html
+++ b/index.html
@@ -207,8 +207,7 @@
 				<h2>Link to Prototype: http://duzuro.herokuapp.com/</h2>
 				<h2>Features:</h2> 
 			
-				<p>View Questions/Answers:</p>
-				<p>The left sidebar will feature the questions associated with the lecture video. The user will have the option to toggle between questions that pertain to his/her place in the video and all questions in the video. Further, there will functionality to search the questions or order them by various filters such as popularity or time proximity in this sidebar. When a question is clicked, the left sidebar switches views to display that question's details and all of its corresponding answers. When an answer is clicked, its details, in turn, are displayed in the bottom bar of the screen. Similarly, when the "Add Answer" button is clicked for a particular question, a form for submitting an answer appears in the bottom bar as well. </p>
+				<p><b>View Questions/Answers:</b><br>The left sidebar will feature the questions associated with the lecture video. The user will have the option to toggle between questions that pertain to his/her place in the video and all questions in the video. Further, there will functionality to search the questions or order them by various filters such as popularity or time proximity in this sidebar. When a question is clicked, the left sidebar switches views to display that question's details and all of its corresponding answers. When an answer is clicked, its details, in turn, are displayed in the bottom bar of the screen. Similarly, when the "Add Answer" button is clicked for a particular question, a form for submitting an answer appears in the bottom bar as well. </p>
 				
 				<p>Visual Markers:</p>
 				<p>The video stream bar would feature visual markers, much like the annotation markers on SoundCloud, to indicate the presence of questions/comments added at certain points in the video. </p>
