--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 				
 				<p><b>Basic UI</b></p>
 				
-				<p><b>Annotation Progress:</b><br>We gave the development of the rich annotation system high priority, but as it requires all the functionality in the layer beneath it (video, questions, answers) to be built before and is itself a large and complex feature, we are still in the process of completing it. However, we have made progress in developing this feature, and plan to have it completed soon.</p>
+				<p><b>Annotation Progress:</b><br>We gave high priority to the development of a rich annotation system, but as it requires all the functionality in the layer beneath it (video, questions, answers) to have been built first and is itself a large and complex feature, we are still in the process of completing it. We have made progress in developing this feature, and plan to have it completed for next week's user testing. However, for the purposes of in-class pilot studies, we feel that the ability to embed and interact with even text questions and answers directly in the stream of the video allows users to experience the rich, contextualized classroom learning we are hoping to deliver.</p>
 			</div>
 			<div class="row sb-2 text-left">	
 				<h2>To Do (In Decreasing Priority): </h2>
