added presenation slides

--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@
 						<li>Respond to a post by another student.</li>
 					</ul>
 
+					<iframe src="https://docs.google.com/presentation/d/1knLo8_RYv0DaBMhVpR92_UwhMR5kCF6RmunWYkoBzoA/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 				</div>
 			</div>
 		</div>
