--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
 					<p>We would like to find out:</p>
 
 					<ol>
-						<li>What kind of communication (real-time vs. asynchronous) users appreciate more. </li>
-						<li>What is an ideal number of people per group, how people would like study groups to be formed.</li>
+						<li>What kind of social and curriculum-based needs do remote vs. local students have in the "classroom"? </li>
+						<li>What kind of communication (video-embedded, diagrams, content-independent) is most beneficial for these students? What is currently difficult?</li>
 					</ol>
 
 					<h2>Methodology</h2>
@@ -346,7 +346,7 @@
 						<li>Use previous annotations to get a sense of what this lecture is about.</li>
 						<li>Respond to a post by another student.</li>
 					</ul>
-
+                                        <h2>Results, Discussion, and Future Steps</h2>
 					<iframe src="https://docs.google.com/presentation/d/1knLo8_RYv0DaBMhVpR92_UwhMR5kCF6RmunWYkoBzoA/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 				</div>
 			</div>
