--- a/public/timeline2.html
+++ b/public/timeline2.html
@@ -1,7 +1,15 @@
-<div id="topFrameWrapper" ui-view></div>
-<div id="bottomFrameWrapper">
-<div ng-controller="ProjectTimelineCtrl">
-	<h1>{{projectTitle}}</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="./css/timeline.css">
+	<link rel="stylesheet" type="text/css" href="./css/fancy-timeline.css">
+	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script type="text/javascript" src="./js/fancy-timeline.js"></script>
+
+</head>
+
+<body>
+<h1>Project Title</h1>
 <div id="timeline">
 		<hr id= "the-line" width="100%" />
 
@@ -27,5 +35,7 @@
 
 
 </div>
-</div>
-</div>
+
+
+</body>
+</html>
