--- a/public/timeline.html
+++ b/public/timeline.html
@@ -1,8 +1,63 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="language" content="spanish"/>
+        <meta name="author" content="Flowcode"/>
+        <title>Fancy Timeline - Example</title>
+        <link rel="shortcut icon" href="favicon.ico" />
 
-<link rel="stylesheet" type="text/css" href="/css/timeline.css">
+        <link rel="stylesheet" type="text/css" href="css/global.css">
 
+        <!-- jquery -->
+        <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+
+        <!-- fancy-timeline -->
+        <script type="text/javascript" src="js/fancy-timeline.js"></script>
+        <link type="text/css" href="css/fancy-timeline.css" rel="stylesheet" />
+
+    </head>
+    <body>
+    <h1>Project Title</h1>
+
+        <!-- content -->
+        <div id="content">
+            <div id="container">
+                <div class="timeline-container"></div>
+            </div>
+        </div>
+
+
+        <script type="text/javascript">
+            $(document).ready(function(){
+                var dates = [
+                    {
+                        "marker": "Milestone 1", 
+                        "type": "default",
+                        "title": "Milestone 1" ,
+                        "content": "Here's some stuff."
+                    },
+                    {
+                        "marker": "Milestone 2", 
+                        "type": "default",
+                        "title": "Nirvana",
+                        "content": "Kurt Cobain (front) and Krist Novoselic (left) live at the 1992"
+                    },
+                    {
+                        "marker": "Milestone 3", 
+                        "type": "default",
+                        "title": "5 de Abril" ,
+                        "content": "<p>El 23 de febrero 1994 Kurt Cobain hizo su última aparición en televisión en un programa de la televisión italiana, Tunnel, de Serena Dandini.</p><p>El 1 de marzo de 1994, después de un concierto en el Terminal Einz, en Múnich, Alemania, a Cobain se le diagnosticó bronquitis y laringitis severas. Al día siguiente fue a Roma para tratamiento médico. Su esposa estaría allí el 3 de marzo.</p>"
+                    }
+                ];
+    
+                $(".timeline-container").fancyTimeline({
+                    initPos: 0,
+                    data: dates
+                });
+            });
+        </script>
+    </body>
 </html>
+
+
