Edited plugin jquery file.

--- a/public/timeline.html
+++ b/public/timeline.html
@@ -32,22 +32,22 @@
             $(document).ready(function(){
                 var dates = [
                     {
-                        "marker": "Milestone 1", 
+                        "marker": "1", 
                         "type": "default",
                         "title": "Milestone 1" ,
                         "content": "Here's some stuff."
                     },
                     {
-                        "marker": "Milestone 2", 
+                        "marker": "2", 
                         "type": "default",
-                        "title": "Nirvana",
-                        "content": "Kurt Cobain (front) and Krist Novoselic (left) live at the 1992"
+                        "title": "Milestone 2",
+                        "content": "Here's some more stuff."
                     },
                     {
-                        "marker": "Milestone 3", 
+                        "marker": "3", 
                         "type": "default",
-                        "title": "5 de Abril" ,
-                        "content": "<p>El 23 de febrero 1994 Kurt Cobain hizo su última aparición en televisión en un programa de la televisión italiana, Tunnel, de Serena Dandini.</p><p>El 1 de marzo de 1994, después de un concierto en el Terminal Einz, en Múnich, Alemania, a Cobain se le diagnosticó bronquitis y laringitis severas. Al día siguiente fue a Roma para tratamiento médico. Su esposa estaría allí el 3 de marzo.</p>"
+                        "title": "Milestone 3" ,
+                        "content": "Blah"
                     }
                 ];
     
