Basically played with the fancy-timeline css to see how much of it I could get rid of without losing functionality. Also ported some of it over.

--- a/public/timeline2.html
+++ b/public/timeline2.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="./css/timeline.css">
-	<link rel="stylesheet" type="text/css" href="./css/fancy-timeline.css">
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script type="text/javascript" src="./js/fancy-timeline.js"></script>
 
@@ -11,26 +10,66 @@
 <body>
 <h1>Project Title</h1>
 <div id="timeline">
-		<hr id= "the-line" width="100%" />
+<div id="timeline-display">
+
 
 	<div class="milestone">
-		<p class="milestone-text">Milestone 1: Something</p>
-		<span class="user red"><i class=".ra-icon-user:before"></i></span>
-		<span class="user red"><i class=".ra-icon-user:before"></i></span>
-		<span class="user red"><i class=".ra-icon-user:before"></i></span>
-
+		<div class="milestone-content">
+			<span class="milestone-title">Milestone 1: Something</span>
+			<span class="milestone-content">
+				Lorem Ipsum.....
+			</span>
+		</div>
 	</div>
 
-	<div class="milestone"><p class="milestone-text">Milestone 1: Something</p></div>
-	<div class="milestone"><p class="milestone-text">Milestone 1: Something</p></div>
-	<div class="milestone"><p class="milestone-text">Milestone 1: Something</p></div>
-	<div class="milestone"><p class="milestone-text">Milestone 1: Something</p></div>
-	<div class="milestone"><p class="milestone-text">Milestone 1: Something</p></div>
-	<div class="milestone"><p class="milestone-text">Milestone 1: Something</p></div>
-	<div class="milestone"><p class="milestone-text">Milestone 1: Something</p></div>
-	<div class="milestone"><p class="milestone-text">Milestone 1: Something</p></div>
-	<div class="milestone"><p class="milestone-text">Milestone 1: Something</p></div>
-	<div class="milestone"><p class="milestone-text">Milestone 1: Something</p></div>
+	<div class="milestone">
+		<div class="milestone-content">
+			<span class="milestone-title">Milestone 1: Something</span>
+			<span class="milestone-content">
+				Lorem Ipsum.....
+			</span>
+		</div>
+	</div>
+
+	<div class="milestone">
+		<div class="milestone-content">
+			<span class="milestone-title">Milestone 1: Something</span>
+			<span class="milestone-content">
+				Lorem Ipsum.....
+			</span>
+		</div>
+	</div>
+
+		<div class="milestone">
+		<div class="milestone-content">
+			<span class="milestone-title">Milestone 1: Something</span>
+			<span class="milestone-content">
+				Lorem Ipsum.....
+			</span>
+		</div>
+	</div>
+
+	<div class="milestone">
+		<div class="milestone-content">
+			<span class="milestone-title">Milestone 1: Something</span>
+			<span class="milestone-content">
+				Lorem Ipsum.....
+			</span>
+		</div>
+	</div>
+
+	<div class="milestone">
+		<div class="milestone-content">
+			<span class="milestone-title">Milestone 1: Something</span>
+			<span class="milestone-content">
+				Lorem Ipsum.....
+			</span>
+		</div>
+	</div>
+	<div id= "the-line"></div>
+	
+
+</div>
 
 
 </div>
