Styled and hooked up timeline

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Duzuro</title>
 
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
@@ -11,6 +12,7 @@
 	<script type="text/javascript" src="/js/firebase.min.js"></script>
 	<script type="text/javascript" src="/js/angular.min.js"></script>
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
+	<script type="text/javascript" src="/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/js/duzuro.js"></script>
 
 	<script type="text/javascript">
