--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,27 @@
 <head>
 	<title>Duzuro</title>
 
-	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
-	<div id="mainViewWrapper" ui-view></div>
+	<header id="header" ng-controller="HeaderCtrl">
+		<div class="login-box" ng-hide="authData.loggedIn">
+			<div class="input-wrapper">
+				<input type="text" ng-model="username" ng-enter="setUsername()" placeholder="Choose username..." />
+			</div>
+			<button ng-click="setUsername()">Submit</button>
+		</div>
+		<div class="account-box">
+			{{ authData.username }}
+		</div>
+	</header>
+	<div id="mainViewWrapper">
+		<div id="mainView" ui-view></div>
+	</div>
 
 	<script type="text/javascript" src="/js/firebase.min.js"></script>
 	<script type="text/javascript" src="/js/angular.min.js"></script>
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
-	<script type="text/javascript" src="/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/js/duzuro.js"></script>
 
 	<script type="text/javascript">
