--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 				<h2>Implementation Progress:</h2> 
 				
 				<p><b>Timeline:</b><br>
-				We have built a basic implementation of the timeline that consists of the various milestones and identifies user progress across it. This timeline is the home page that the user lands on, and serves as a navigation bar at the bottom of the screen as they move to other pages.</p>
+				We have built a basic implementation of the timeline that consists of the various milestones. This timeline is the home page that the user lands on, and serves as a navigation bar at the bottom of the screen as they move to other pages. Since we don't have user profile pictures at the moment, we are displaying the users who are on each milestone on the individual milestone pages rather than on the milestone timeline.</p>
 				
 				<p><b>Milestone Framework</b><br>
 				The framework for individual milestones, each consisting of relevant resources and communication threads and a register of who is "on that milestone" has been implemented. A form allowing users to add new milestones must be created. Further, this framework must be expanded to allow for multiple assignments per account. 
