Added colors to users.

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 	<title>Duzuro</title>
 
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/css/milestone.css">
 </head>
 <body>
 	<header id="header" ng-controller="HeaderCtrl">
