--- a/index.html
+++ b/index.html
@@ -409,6 +409,11 @@
 					<h1>Milestone 7: <small>User Study II</small></h1>
 				</div>
 			</header>
+			<div class="row">
+				<div class="col-md-12">
+					<iframe src="https://docs.google.com/presentation/d/1TVCAqf1YDJQms4ZzmwtwZLvGH9SLpFyKqrI11vXs9hA/edit#slide=id.g333455666_05" frameborder="0" width="960" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+				</div>
+			</div>
 		</div>
 	</section>
 	<section id="m8">
