--- a/index.html
+++ b/index.html
@@ -414,6 +414,11 @@
 					<iframe src="https://docs.google.com/presentation/d/1TVCAqf1YDJQms4ZzmwtwZLvGH9SLpFyKqrI11vXs9hA/edit#slide=id.g333455666_05" frameborder="0" width="960" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<iframe src="https://docs.google.com/document/d/1NAr5MdzlogiKdkJNewZ0diZ1IKXKyM4Vy_lm4FpnYk8/edit" frameborder="0" width="960" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+				</div>
+			</div>
 		</div>
 	</section>
 	<section id="m8">
