--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h2>Results</h2>
-					<iframe src="https://docs.google.com/presentation/d/1TVCAqf1YDJQms4ZzmwtwZLvGH9SLpFyKqrI11vXs9hA/edit#slide=id.g333455666_05" frameborder="0" width="960" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+					<iframe src="https://docs.google.com/presentation/d/1TVCAqf1YDJQms4ZzmwtwZLvGH9SLpFyKqrI11vXs9hA/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 				</div>
 				<div class="col-md-12">
 					<h2>Participant Consent Form</h2>
