--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 				</div>
 				<div class="col-md-12">
 					<h2>Participant Consent Form</h2>
-					<iframe src="https://docs.google.com/document/d/1NAr5MdzlogiKdkJNewZ0diZ1IKXKyM4Vy_lm4FpnYk8/edit" frameborder="0" width="960" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+					<iframe src="https://docs.google.com/document/d/1NAr5MdzlogiKdkJNewZ0diZ1IKXKyM4Vy_lm4FpnYk8/pub?embedded=true"></iframe>
 				</div>
 			</div>
 		</div>
