Add final presentation to M8

--- a/index.html
+++ b/index.html
@@ -427,6 +427,8 @@
 			<header class="row text-center">
 				<div class="col-md-12">
 					<h1>Milestone 8: <small>Final Presentation</small></h1>
+					
+					<iframe src="https://docs.google.com/presentation/d/1_yuv1gH51FZi10eAp4pwtte-tGCyaDVMb2BnL9G0dyc/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 				</div>
 			</header>
 		</div>
