--- a/index.html
+++ b/index.html
@@ -427,15 +427,17 @@
 			<header class="row text-center">
 				<div class="col-md-12">
 					<h1>Milestone 8: <small>Final Presentation</small></h1>
+
+					<p>View our code on <a href="https://github.com/drock07/duzuro">Github</a> or <a href="duzuro.zip">download our code directly</a>.</p>
 					
 					<iframe src="https://docs.google.com/presentation/d/1_yuv1gH51FZi10eAp4pwtte-tGCyaDVMb2BnL9G0dyc/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 					<br />
 					<br />
 
-					<img src="img/CS247_Final_Poster-page-001.jpg">
+					<img class="img-responsive" src="img/CS247_Final_Poster-page-001.jpg">
 
-					<p>View our code on <a href="https://github.com/drock07/duzuro">Github</a> or <a href="duzuro.zip">download our code directly</a>.</p>
+					
 				</div>
 			</header>
 		</div>
